# Sim7600x_GPS_ros

./: README.md
Sim7600_GPS/: a.out  usbCom.cpp  usbCom.h  usbMain  usbMain.cpp  usbROSMain.cpp
Sim7600_GPS/sim7600gps/: CMakeLists.txt  package.xml
Sim7600_GPS/sim7600gps/include/sim7600gps/: usbCom.h
Sim7600_GPS/sim7600gps/src/: usbCom.cpp  usbROSMain.cpp
Sim7600_GPS/version1_WorkingReadWrite/: a.out  test.cpp  usbRead  usbRead.cpp  usbWrite  usbWrite.cpp
Sim7600_GPS/version2_SendAT1ThenRead/: usbReadWrite.cpp
